erDiagram
    IMAP_CONFIGURATION {
        UUID id PK
        VARCHAR(50) code UK
        VARCHAR(255) name
        VARCHAR(255) imap
        BOOLEAN ssl
        INT port
        VARCHAR(255) username
        VARCHAR(50) password
        BOOLEAN is_active
        TIMESTAMP created_at
        VARCHAR(255) created_by
        TIMESTAMP modified_at
        VARCHAR(255) modified_by
    }

    SMTP_CONFIGURATION {
        UUID id PK
        VARCHAR(20) code UK
        VARCHAR(200) name
        VARCHAR(200) smtp
        BOOLEAN ssl
        INT port
        VARCHAR(200) email_address
        VARCHAR(200) username
        VARCHAR(200) password
        VARCHAR(200) from_name
        BOOLEAN is_active
        TIMESTAMP created_at
        VARCHAR(255) created_by
        TIMESTAMP modified_at
        VARCHAR(255) modified_by
        BOOLEAN is_google
        BOOLEAN is_outlook
        VARCHAR(500) app_id
        VARCHAR(500) tenant_id
        VARCHAR(500) secret_id
        BOOLEAN use_access_token
        TEXT access_token
        TEXT code_challange
        TEXT refresh_token
    }

    MAILBOX {
        UUID id PK
        VARCHAR(200) name
        UUID smtp_id FK
        UUID imap_id FK
        BOOLEAN is_active
        TIMESTAMP created_at
        VARCHAR(255) created_by
        TIMESTAMP modified_at
        VARCHAR(255) modified_by
    }

    MESSAGE {
        UUID id PK
        UUID mailbox_id FK
        VARCHAR(2000) subject
        TEXT text_plain
        TEXT text_html
        TEXT format_text_html
        TIMESTAMP date_sent
        TEXT cc_field
        TEXT bcc_field
        TEXT sent_to
        VARCHAR(500) sent_from
        VARCHAR(500) sent_from_displayn_ame
        VARCHAR(500) sent_from_raw
        VARCHAR(500) imap_message_id
        VARCHAR(255) mime_version
        TEXT return_path
        VARCHAR(255) created_by
        TIMESTAMP created_at
        BOOLEAN is_deleted
    }

    MAILBOX ||--o{ MESSAGE : "has"
    SMTP_CONFIGURATION ||--o{ MAILBOX : "configures"
    IMAP_CONFIGURATION ||--o{ MAILBOX : "configures"